# arli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.sh
.github/workflows/: ci.yml  release.yml
arli-cli/: Cargo.toml
arli-cli/src/: main.rs  tui.rs
arli-core/: Cargo.toml
arli-core/src/: agent.rs  agent_governance.rs  agent_profile.rs  ast_language.rs  attestation.rs  audit.rs  brokering.rs  brokering_api.rs  checkpoints.rs  compaction.rs  config.rs  context.rs  credentials.rs  cron.rs  dashboard.rs  enso.rs  error.rs  failure_attribution.rs  guardrail.rs  harness_analytics.rs  harness_telemetry.rs  hashline.rs  health.rs  hooks.rs  inference.rs  kanban.rs  lessons.rs  lib.rs  mcp.rs  memory.rs  metrics.rs  native_search.rs  optimize.rs  plugins.rs  policy.rs  process.rs  profiles.rs  quality_critic.rs  safety.rs  sandbox.rs  (+16 more)
arli-core/src/enso/: marketplace.rs  mod.rs  oracle.rs
arli-core/src/providers/: anthropic.rs  mod.rs  openai.rs  openrouter.rs  registry.rs  traits.rs
arli-core/src/providers/provider_configs/: mod.txt
arli-core/src/sandbox/: default_policy.yaml  engine.rs  enso-sandbox-policy-v1.json  landlock.rs  macos.rs  mod.rs  policy.rs  privdrop.rs  seccomp.rs
arli-core/src/swarm/: coordination.rs  mod.rs
arli-core/src/tools/: ast_edit.rs  browser.rs  builtin.rs  delegate.rs  execute_code.rs  hashedit.rs  http_get.rs  image_gen.rs  kanban.rs  memory.rs  mod.rs  patch.rs  process.rs  resolve.rs  search.rs  search_files.rs  toolsets.rs  video_gen.rs  vision.rs  voice.rs  web_search.rs
arli-core/tests/: attestation_demo.rs  integration.rs
arli-gateway/: Cargo.toml
arli-gateway/src/: bluebubbles.rs  dingtalk.rs  discord.rs  email.rs  feishu.rs  google_chat.rs  health.rs  irc.rs  lib.rs  line.rs  main.rs  matrix.rs  ntfy.rs  pairing.rs  qq.rs  signal.rs  simplex.rs  slack.rs  sms.rs  teams.rs  telegram.rs  wecom.rs  whatsapp.rs  yuanbao.rs
arli-trading/: Cargo.toml
arli-trading/src/: agent.rs  backtest.rs  bias_model.rs  client.rs  confidence.rs  confidence_ledger.rs  execution.rs  fair_value.rs  handler.rs  lib.rs  multi_agent.rs  optimize.rs  risk.rs  skills.rs  strategy.rs  tools.rs
arli-trading/src/indicators/: adx.rs  atr.rs  bollinger.rs  cci.rs  cvd.rs  ema.rs  ichimoku.rs  keltner.rs  macd.rs  mod.rs  obv.rs  parabolic_sar.rs  rsi.rs  sma.rs  stochastic.rs  supertrend.rs  vwap.rs
arli-trading/src/strategies/: indicator_strategy.rs  mean_reversion.rs  mod.rs  trend_following.rs
data/: AVAX_1h_30d.json  BTC_1h_30d.json  DOGE_1h_30d.json  ETH_1h_30d.json  LINK_1h_30d.json  SOL_1h_30d.json  XRP_1h_30d.json  btc_1h_30d.json  multi_AVAX.json  multi_BTC.json  multi_DOGE.json  multi_ETH.json  multi_LINK.json  multi_SOL.json  multi_XRP.json  multi_agent_config.json  track_record.json
docs/: architecture.html  compliance-matrix.md  deployment-guide.md  security-whitepaper.md
