[workspace]
resolver = "2"
members = [
    "arli-core",
    "arli-cli",
    "arli-trading",
    "arli-gateway",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ARLI-Research/arli"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async trait
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Token counting
tiktoken-rs = "0.6"

# JSON Value manipulation
json-patch = "3"  # for JSON schema patching

# Unique IDs
ulid = "1"

# System
libc = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# HTML parsing
scraper = "0.22"

# Image processing
image = "0.24"

# Cron scheduling
cron = "0.15"

# Sandboxing (OpenShell patterns)
landlock = "0.4"
seccompiler = "0.5"
serde_yaml = "0.9"
nix = { version = "0.29", features = ["process", "user", "fs"] }
users = "0.11"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa", "std"] }
rlp = "0.5"
