[package]
name = "arli-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "arli"
path = "src/main.rs"

[dependencies]
arli-core = { path = "../arli-core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui = "0.29"
crossterm = "0.28"
rpassword = "7"
