[package]
name = "arli-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "arli"
path = "src/main.rs"

[dependencies]
arli-core = { path = "../arli-core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
chrono.workspace = true
ulid.workspace = true
uuid.workspace = true
ratatui = "0.29"
crossterm = "0.28"
rpassword = "7"
toml.workspace = true
clap_complete.workspace = true
self_update = { version = "0.41", features = ["archive-tar", "archive-zip"] }
libc.workspace = true
axum = "0.7"
tower = "0.5"
sha2 = "0.10"
serde_json.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true

[features]
enso = ["arli-core/enso"]
