[package]
name = "arli-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tiktoken-rs.workspace = true
json-patch.workspace = true
ulid.workspace = true
chrono.workspace = true
libc.workspace = true
toml.workspace = true
cron.workspace = true
