[package]
name = "arli-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tiktoken-rs.workspace = true
json-patch.workspace = true
ulid.workspace = true
chrono.workspace = true
libc.workspace = true
toml.workspace = true
cron.workspace = true
scraper.workspace = true
image.workspace = true

# HTTP server for webhooks
axum = "0.7"
tower = "0.5"

# Sandboxing (OpenShell patterns)
landlock.workspace = true
seccompiler.workspace = true
serde_yaml.workspace = true
nix.workspace = true
users.workspace = true

# Cryptography (attestation + ENSO integration)
ed25519-dalek.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true

# ICP client (ENSO canister calls) — optional feature
ic-agent = { version = "0.37", optional = true }
candid = { version = "0.10", optional = true }

[features]
default = []
enso = ["ic-agent", "candid"]

[dev-dependencies]
tokio-test = "0.4"
