[package]
name = "arli-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "arli-gateway"
path = "src/main.rs"

[dependencies]
arli-core = { path = "../arli-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
toml.workspace = true
clap.workspace = true
libc.workspace = true

# Discord
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }

# Slack Socket Mode
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# WhatsApp webhook server
axum = "0.7"
tower = "0.5"

# WhatsApp webhook verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
