[package]
name = "arli-trading"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arli-core = { path = "../arli-core" }
hypersdk = { path = "../../hypersdk" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
ulid.workspace = true
rust_decimal = { version = "1", features = ["macros", "maths", "serde"] }
sha2.workspace = true
hex.workspace = true
rust_decimal_macros = "1.40.0"
rusqlite.workspace = true
